<resources>
    <string name="app_name">DealSteal</string>
    <string name="add_item">Add Item</string>
    <string name="add_bundle">Add Bundle</string>
    <string name="username">Enter Username</string>

    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_add_bundle">Add Bundle</string>

    <string name="location">Enter Location</string>
    <string name="item_name">Enter Item Name</string>
    <string name="item_cost">Enter Item Cost</string>
    <string name="load_picture">Load Picture</string>
    <string name="img_view">imgView</string>
    <string name="create_item">Create Item</string>
    <string name="seller_name">default name</string>
    <string name="view_item_name">default item name</string>
    <string name="seller_location">default location</string>
    <string name="view_item_cost">default cost</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="new_account">Create New Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>

    <string name="create_newaccount">Create Account</string>
    <string name="my_items">My Items</string>
    <string name="my_bundles">My Bundles</string>
    <string name="signed_in_fmt" />

    <string name="login_status">Signed Out</string>

    <string name="go_to_SignIn">SignIn</string>
    <string name="login_button">Login</string>
    <string name="add_to_bundle">Add To Bundle</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_existing_item">Add Existing Item</string>
    <string name="save_bundle">Save Bundle</string>
    <string name="enter_bundle_name">Enter Bundle Name</string>
    <string name="save">Save</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="home">Home</string>


</resources>
