<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/EnterBundleName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/EnterLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EnterBundleName"
        android:layout_marginTop="12dp"
        android:hint="@string/location"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/EnterItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EnterLocation"
        android:layout_marginTop="11dp"
        android:hint="@string/item_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/EnterItemCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/EnterItemName"
        android:layout_marginTop="14dp"
        android:hint="@string/item_cost"
        android:inputType="numberDecimal" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LoadPicture"
        android:layout_below="@+id/EnterItemCost"
        android:contentDescription="@string/img_view" />

    <Button
        android:id="@+id/LoadPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CreateItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="18dp"
        android:background="#4169E1"
        android:onClick="loadImagefromGallery"
        android:text="@string/load_picture"
        android:textColor="#FFFAFA" />

    <Button
        android:id="@+id/CreateItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="18dp"
        android:background="#4169E1"
        android:onClick="createItem"
        android:text="@string/create_item"
        android:textColor="#FFFAFA" />


</RelativeLayout>