<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/ItemNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_item_name"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/ItemCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_item_cost"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/SellerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_name"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/SellerLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seller_location"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/imgView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_view" />




        </LinearLayout>
    </ScrollView>
</LinearLayout>