<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/SellerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/seller_name"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/EnterItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SellerName"
        android:layout_alignStart="@+id/SellerName"
        android:layout_below="@+id/SellerName"
        android:layout_marginTop="31dp"
        android:text="@string/view_item_name"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/SellerLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EnterItemName"
        android:layout_alignStart="@+id/EnterItemName"
        android:layout_below="@+id/EnterItemName"
        android:layout_marginTop="37dp"
        android:text="@string/seller_location"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <ImageView
        android:id="@+id/imgView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/EnterItemCost"
        android:layout_below="@+id/SellerLocation"
        android:contentDescription="@string/img_view" />

    <TextView
        android:id="@+id/EnterItemCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/SellerLocation"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/SellerLocation"
        android:layout_marginBottom="152dp"
        android:text="@string/view_item_cost"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <Button
        android:id="@+id/AddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MyItems"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="19dp"
        android:background="#4169E1"
        android:onClick="toAddBundleFromCreated"
        android:text="@string/add_to_bundle"
        android:textColor="#FFFAFA" />

    <Button
        android:id="@+id/MyItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="17dp"
        android:background="#4169E1"
        android:onClick="toMyItemsFromCreated"
        android:text="@string/my_items"
        android:textColor="#FFFAFA" />

</RelativeLayout>