<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.smflanagan.appproject.MainActivity">

    <LinearLayout
        android:layout_width="585dp"
        android:layout_height="810dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="6dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/AddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#b2f1aa"
                android:drawableLeft="@drawable/green_plus"
                android:onClick="toAddItem"
                android:text="@string/add_item"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:id="@+id/AddBundle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#b2f1aa"
                android:drawableLeft="@drawable/green_plus"
                android:onClick="toAddBundle"
                android:text="@string/add_bundle"
                tools:ignore="ButtonStyle,RtlHardcoded" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/MyItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#4169E1"
                android:drawableLeft="@drawable/item_icon"
                android:onClick="toMyItems"
                android:text="@string/my_items"
                android:textColor="#FFFAFA"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:id="@+id/MyBundles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#4169E1"
                android:drawableLeft="@drawable/bundle_icon2"
                android:text="@string/my_bundles"
                android:textColor="#FFFAFA"
                tools:ignore="ButtonStyle,RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/GoogleImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/google_logo_small"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/SignInButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="toLoginScreen"
                android:text="@string/login"
                android:background="#4169E1"
                android:textColor="#FFFAFA"
                tools:ignore="InefficientWeight" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
